--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,55 @@
 services:
-  keycloak:
-    container_name: keycloak
-    image: quay.io/keycloak/keycloak:26.3
-    ports:
-      - 9090:8080
+  postgres:
+    image: postgres:15
     environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: password
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
     volumes:
-      - keycloak_data:/opt/keycloak/data
-    command:
-      - "start-dev"
+      - postgres_data:/var/lib/postgresql/data
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.0.0
+    command: start-dev
+    environment:
+      KC_HOSTNAME: localhost
+      KC_HOSTNAME_PORT: 9090
+      KC_HOSTNAME_STRICT_HTTPS: false
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: password
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    ports:
+      - "9090:8080"
+    depends_on:
+      - postgres
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+  user-db:
+    container_name: user-db
+    image: postgres:15-alpine
+    ports:
+      - "5433:5432"
+    environment:
+      POSTGRES_DB: ${USER_DB:-userdb}
+      POSTGRES_USER: ${DB_USER:-user}
+      POSTGRES_PASSWORD: ${DB_PASS:-pass}
+    volumes:
+      - user-db:/var/lib/postgresql/data
+    restart: unless-stopped
+    networks:
+      - nexo-network
+networks:
+  nexo-network:
+    driver: bridge
 
 volumes:
-  keycloak_data:
+  postgres_data:
+  user-db:
