--- a/services/upload-file-service/src/main/resources/application.yml
+++ b/services/upload-file-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8085
+  port: 8086
 spring:
   application:
-    name: users
+    name: files
 eureka:
   client:
     serviceUrl:
@@ -11,3 +11,7 @@ eureka:
     fetch-registry: true
   instance:
     prefer-ip-address: true
+app:
+  firebase:
+    file: serviceAccountKey.json
+    bucket: savefileimage.appspot.com
