update post,file service

--- a/services/upload-file-service/src/main/resources/application.yml
+++ b/services/upload-file-service/src/main/resources/application.yml
@@ -11,6 +11,11 @@ eureka:
     fetch-registry: true
   instance:
     prefer-ip-address: true
+grpc:
+  client:
+    posts:
+      address: static://localhost:9091
+      negotiationType: plaintext
 app:
   firebase:
     file: serviceAccountKey.json
