--- a/services/upload-file-service/src/main/resources/application.yml
+++ b/services/upload-file-service/src/main/resources/application.yml
@@ -3,6 +3,10 @@ server:
 spring:
   application:
     name: files
+  servlet:
+    multipart:
+      max-file-size: 500MB
+      max-request-size: 500MB
 eureka:
   client:
     serviceUrl:
