--- a/services/post-service/src/main/resources/application.yml
+++ b/services/post-service/src/main/resources/application.yml
@@ -18,6 +18,8 @@ spring:
   servlet:
     multipart:
       enabled: true
+      max-file-size: 500MB
+      max-request-size: 500MB
 
 eureka:
   client:
