--- a/services/user-service/pom.xml
+++ b/services/user-service/pom.xml
@@ -103,6 +103,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 
 	</dependencies>
 	<dependencyManagement>
@@ -124,7 +128,7 @@
 				<groupId>io.grpc</groupId>
 				<artifactId>grpc-stub</artifactId>
 				<version>${grpc.version}</version>
-			</dependency>
+				</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -155,7 +159,8 @@
 				</configuration>
 				<executions>
 					<execution>
-						<goals>							<goal>compile</goal>
+						<goals>							
+							<goal>compile</goal>
 							<goal>compile-custom</goal>
 						</goals>
 					</execution>
