--- a/services/user-service/src/main/resources/application.yml
+++ b/services/user-service/src/main/resources/application.yml
@@ -21,6 +21,12 @@ spring:
       port: 6379
       timeout: 2000ms
       connect-timeout: 2000ms
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:9090/realms/nexo-network
+          jwk-set-uri: http://localhost:9090/realms/nexo-network/protocol/openid-connect/certs
 
 eureka:
   client:
