--- a/services/post-service/src/main/resources/application.yml
+++ b/services/post-service/src/main/resources/application.yml
@@ -50,3 +50,7 @@ feign:
 grpc:
   server:
     port: 9091
+  client:
+    users:
+      address: static://localhost:9092
+      negotiation-type: plaintext
