--- a/services/feed-service/src/main/resources/application.yml
+++ b/services/feed-service/src/main/resources/application.yml
@@ -1,8 +1,23 @@
 server:
-  port: 8085
+  port: 8084
 spring:
   application:
-    name: feed
+    name: feeds
+  datasource:
+    url: jdbc:postgresql://localhost:5433/userdb
+    driver-class-name: org.postgresql.Driver
+    username: user
+    password: pass
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  h2:
+    console:
+      enabled: false
   security:
     oauth2:
       resourceserver:
@@ -15,7 +30,7 @@ spring:
       host: localhost
 eureka:
   client:
-    serviceUrl:
+    service-url:
       defaultZone: http://localhost:8761/eureka/
     register-with-eureka: true
     fetch-registry: true
@@ -26,5 +41,8 @@ grpc:
   client:
     posts:
       address: static://localhost:9091
+      negotiation-type: plaintext
+    users:
+      address: static://localhost:9092
       negotiation-type: plaintext
 
