--- a/services/api-gateway/src/main/resources/application.yml
+++ b/services/api-gateway/src/main/resources/application.yml
@@ -15,6 +15,34 @@ spring:
             locator:
               enabled: true
               lower-case-service-id: true
+          routes:
+            - id: user-service
+              uri: lb://users
+              predicates:
+                - Path=/api/users/**
+              filters:
+                - StripPrefix=1
+
+            - id: post-service
+              uri: lb://posts
+              predicates:
+                - Path=/api/posts/**
+              filters:
+                - StripPrefix=1
+
+            - id: feed-service
+              uri: lb://feeds
+              predicates:
+                - Path=/api/feeds/**
+              filters:
+                - StripPrefix=1
+
+            - id: auth-service
+              uri: lb://auth
+              predicates:
+                - Path=/api/auth/**
+              filters:
+                - StripPrefix=1
 eureka:
   client:
     serviceUrl:
