update API CRUD Interaction

--- a/services/api-gateway/src/main/resources/application.yml
+++ b/services/api-gateway/src/main/resources/application.yml
@@ -47,6 +47,12 @@ spring:
               filters:
                 - StripPrefix=2
 
+            - id: interaction-service
+              uri: lb://interaction
+              predicates:
+                - Path=/api/interaction/**
+              filters:
+                - StripPrefix=2
 
 eureka:
   client:
