--- a/services/interaction-service/src/main/resources/application.yml
+++ b/services/interaction-service/src/main/resources/application.yml
@@ -58,3 +58,7 @@ grpc:
     users:
       address: static://localhost:9092
       negotiation-type: plaintext
+    posts:
+      address: static://localhost:9094
+      negotiation-type: plaintext
+
