feat(user-service): enhance user profile update with avatar upload functionality
- Updated UserServiceImp to allow avatar file upload during user profile update.
- Modified getUserProfile method to retrieve user by username instead of ID.
- Integrated UploadFileGrpcClient for handling avatar uploads via gRPC.
- Adjusted UserService interface to reflect changes in method signatures.

fix(user-grpc-service): corrected followee retrieval method

- Changed followService method from getFolloweesByUserId to getFollowersByUserId.

chore(messaging-service): initialize messaging service with basic structure

- Created initial project structure for messaging-service including pom.xml, application properties, and main application class.
- Added basic test class for application context loading.

feat(upload-file-service): implement gRPC service for file uploads

- Developed UploadFileGrpcServiceImpl to handle avatar upload requests.
- Integrated IUploadFileService for processing file uploads.

feat(user-service): define proto file for post media services

- Added PostMediaService.proto to define gRPC service and messages for media uploads.

--- a/services/messaging-service/pom.xml
+++ b/services/messaging-service/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.4</version>
+		<version>3.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>org.nexo</groupId>
-	<artifactId>eureka-server</artifactId>
+	<groupId>org.nexo.messagingservice</groupId>
+	<artifactId>messaging-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>eureka-server</name>
-	<description>eureka-server</description>
+	<name>messaging-service</name>
+	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -28,37 +28,50 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
-		<spring-cloud.version>2025.0.0</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
