--- a/services/api-gateway/src/main/resources/application.yml
+++ b/services/api-gateway/src/main/resources/application.yml
@@ -6,7 +6,10 @@ spring:
     multipart:
       max-file-size: 500MB
       max-request-size: 500MB
-
+  data:
+    redis:
+      port: 6379
+      host: localhost
   application:
     name: api-gateway
 
@@ -50,7 +53,7 @@ spring:
                     redis-rate-limiter.burstCapacity: 20
                     redis-rate-limiter.key-resolver: "#{@userKeyResolver}"
 
-            - id: auth-service
+            - id: auth-serviceD
               uri: lb://auth
               predicates:
                 - Path=/api/auth/**
