add notification service

--- a/services/interaction-service/src/main/resources/application.yml
+++ b/services/interaction-service/src/main/resources/application.yml
@@ -33,6 +33,17 @@ spring:
     redis:
       port: 6379
       host: localhost
+  kafka:
+    bootstrap-servers: localhost:9097
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      acks: all
+      retries: 1
+      properties:
+        enable.idempotence: true
+        max.in.flight.requests.per.connection: 5
+        spring.json.add.type.headers: false
 eureka:
   client:
     serviceUrl:
