Refactor: Implement pagination and mutual followers feature in user service; add Dockerfiles for services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,118 @@
 services:
+  api-gateway:
+    container_name: api-gateway
+    build: ./services/api-gateway
+    ports:
+      - "8080:8080"
+    restart: unless-stopped
+    environment:
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka/
+    depends_on:
+      - eureka-server
+    networks:
+      - nexo-network
+
+  auth-service:
+    container_name: auth-service
+    build: ./services/auth-service
+    ports:
+      - "8081:8081"
+    restart: unless-stopped
+    environment:
+      KEYCLOAK_SERVERURL: http://keycloak:8080
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka/
+      GRPC_CLIENT_USER-SERVICE_ADDRESS: static://user-service:9092
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+    depends_on:
+      - eureka-server
+      - redis
+      - keycloak
+      - user-service
+    networks:
+      - nexo-network
+  user-service:
+    container_name: user-service
+    build: ./services/user-service
+    ports:
+      - "8085:8085"
+      - "9092:9092"
+    restart: unless-stopped
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://user-db:5432/userdb
+      SPRING_DATASOURCE_USERNAME: user
+      SPRING_DATASOURCE_PASSWORD: pass
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI: http://keycloak:8080/realms/nexo-network
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: http://keycloak:8080/realms/nexo-network/protocol/openid-connect/certs
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka/
+      GRPC_SERVER_PORT: 9092
+      GRPC_CLIENT_UPLOAD-FILE-SERVICE_ADDRESS: static://upload-file-service:9093
+    depends_on:
+      - user-db
+      - redis
+      - keycloak
+      - eureka-server
+    networks:
+      - nexo-network
+  post-service:
+    container_name: post-service
+    build: ./services/post-service
+    ports:
+      - "8087:8087"
+      - "9094:9094"
+    environment:
+      SERVER_PORT: 8087
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka/
+      SPRING_DATASOURCE_URL: jdbc:postgresql://user-db:5432/userdb
+      SPRING_DATASOURCE_USERNAME: user
+      SPRING_DATASOURCE_PASSWORD: pass
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI: http://keycloak:8080/realms/nexo-network
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: http://keycloak:8080/realms/nexo-network/protocol/openid-connect/certs
+      GRPC_SERVER_PORT: 9094
+      GRPC_CLIENT_USERS_ADDRESS: static://user-service:9092
+    depends_on:
+      - eureka-server
+      - user-db
+      - redis
+      - keycloak
+      - user-service
+    restart: unless-stopped
+    networks:
+      - nexo-network
+
+  upload-file-service:
+    container_name: upload-file-service
+    build: ./services/upload-file-service
+    ports:
+      - "8086:8086"
+      - "9093:9093"
+    environment:
+      SERVER_PORT: 8086
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka-server:8761/eureka/
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI: http://keycloak:8080/realms/nexo-network
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: http://keycloak:8080/realms/nexo-network/protocol/openid-connect/certs
+      GRPC_SERVER_PORT: 9093
+      GRPC_CLIENT_POSTS_ADDRESS: static://post-service:9094
+    depends_on:
+      - eureka-server
+      - keycloak
+      - post-service
+    restart: unless-stopped
+    networks:
+      - nexo-network
+
+  eureka-server:
+    container_name: eureka-server
+    build: ./services/eureka-server
+    ports:
+      - "8761:8761"
+    restart: unless-stopped
+    networks:
+      - nexo-network
   postgres:
     image: postgres:15
     environment:
@@ -9,6 +123,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - nexo-network
 
   keycloak:
     image: quay.io/keycloak/keycloak:26.0.0
@@ -27,11 +143,15 @@ services:
       - "9090:8080"
     depends_on:
       - postgres
+    networks:
+      - nexo-network
 
   redis:
     image: redis:7-alpine
     ports:
       - "6379:6379"
+    networks:
+      - nexo-network
   user-db:
     container_name: user-db
     image: postgres:15-alpine
