--- a/services/upload-file-service/src/main/resources/application.yml
+++ b/services/upload-file-service/src/main/resources/application.yml
@@ -35,5 +35,5 @@ app:
 
 hls:
   ffmpeg:
-    path: D:/App_1/ffmage/ffmpeg-8.0-full_build/bin/ffmpeg.exe
+    path: D:\\App_1\\ffmage\\ffmpeg-8.0-full_build\\ffmpeg-8.0-full_build\\bin\\ffmpeg.exe
 
