--- a/services/post-service/src/main/resources/application.yml
+++ b/services/post-service/src/main/resources/application.yml
@@ -45,7 +45,7 @@ spring:
         enable.idempotence: true
         max.in.flight.requests.per.connection: 5
         spring.json.add.type.headers: false
-        
+
 eureka:
   client:
     serviceUrl:
@@ -70,5 +70,8 @@ grpc:
   client:
     users:
       address: static://localhost:9092
+      negotiation-type: plaintext
+    interactions:
+      address: static://localhost:9095
       negotiation-type: plaintext
 
