Implement Chat Service WebSocket with SockJS Demo HTML Websocket Refactor Resend Verify Email

--- a/services/api-gateway/src/main/resources/application.yml
+++ b/services/api-gateway/src/main/resources/application.yml
@@ -19,9 +19,9 @@ spring:
         webflux:
           globalcors:
             cors-configurations:
-              "[/**]":
-                allowedOrigins:
-                  - "http://localhost:3000"
+              "[/api/**]":
+                allowedOriginPatterns:
+                  - "*"
                 allowedMethods: "*"
                 allowedHeaders: "*"
                 allowCredentials: true
@@ -53,13 +53,12 @@ spring:
             #                    redis-rate-limiter.burstCapacity: 20
             #                    redis-rate-limiter.key-resolver: "#{@userKeyResolver}"
 
-            - id: auth-serviceD
+            - id: auth-service
               uri: lb://auth
               predicates:
                 - Path=/api/auth/**
               filters:
                 - StripPrefix=2
-
 
             - id: interaction-service
               uri: lb://interaction
@@ -67,7 +66,17 @@ spring:
                 - Path=/api/interaction/**
               filters:
                 - StripPrefix=2
+            - id: messaging-service-ws
+              uri: lb:ws://messaging
+              predicates:
+                - Path=/messaging/ws/**
+              filters:
+                - StripPrefix=1
 
+            - id: messaging-service
+              uri: lb://messaging
+              predicates:
+                - Path=/api/**
 
 eureka:
   client:
