--- a/services/user-service/src/main/resources/application.yml
+++ b/services/user-service/src/main/resources/application.yml
@@ -21,6 +21,21 @@ spring:
       port: 6379
       timeout: 2000ms
       connect-timeout: 2000ms
+  kafka:
+    bootstrap-servers: localhost:9097
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.add.type.headers: false
+    consumer:
+      group-id: user-search-group
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "*"
+        spring.json.value.default.type: org.nexo.userservice.dto.UserSearchEvent
+      auto-offset-reset: earliest
   security:
     oauth2:
       resourceserver:
@@ -50,3 +65,13 @@ logging:
     org.nexo.userservice: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+meilisearch:
+  host: http://localhost:7700
+  apiKey: masterKey
+  index:
+    users: users
+
+kafka:
+  topics:
+    user-events: user-events
