--- a/services/user-service/pom.xml
+++ b/services/user-service/pom.xml
@@ -129,6 +129,16 @@
 			<artifactId>spring-security-oauth2-jose</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.meilisearch.sdk</groupId>
+			<artifactId>meilisearch-java</artifactId>
+			<version>0.11.5</version>
+		</dependency>
 		
 		<!-- JWT -->
 		<dependency>
