Implement nickname management and block status handling in messaging service
- Add NicknameRequest DTO for nickname updates.
- Introduce setNickname and getNickname methods in ConversationService and ConversationServiceImpl.
- Update ConversationController to handle nickname setting and retrieval.
- Add nickname field to ConversationResponseDTO and UserDTO.
- Implement gRPC server and client for block status changes.
- Create messaging_service.proto for block status change RPC.
- Update application.yml for gRPC server configuration.

--- a/services/messaging-service/src/main/resources/application.yml
+++ b/services/messaging-service/src/main/resources/application.yml
@@ -37,6 +37,8 @@ eureka:
   instance:
     prefer-ip-address: true
 grpc:
+  server:
+    port: 9095
   client:
     users:
       address: static://localhost:9092
