Add email templates and update docker-compose for Keycloak themes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -225,6 +225,8 @@ services:
       - "9090:8080"
     depends_on:
       - postgres
+    volumes:
+      - ./themes:/opt/keycloak/themes
     networks:
       - nexo-network
 
