feat(auth-service): Implement gRPC for user role management and banning functionality
- Added gRPC server dependency to auth-service.
- Created AuthServiceGrpcImpl to handle role changes and user bans via gRPC.
- Defined proto file for AuthService with ChangeUserRole and BanUser RPCs.
- Updated AuthService interface to include methods for getting admin token and changing user roles.
- Implemented methods in AuthServiceImpl for changing user roles and banning users.
- Integrated gRPC client in user-service to communicate with auth-service for role changes and banning users.
- Enhanced user-service with new endpoints for admin role assignment and user banning.
- Updated application.yml for gRPC server configuration.
- Added necessary DTOs and enums for user roles and account statuses.

--- a/services/auth-service/src/main/resources/application.yml
+++ b/services/auth-service/src/main/resources/application.yml
@@ -27,6 +27,8 @@ logging:
     org.springframework.boot.web: DEBUG
 
 grpc:
+  server:
+    port: 9099
   client:
     user-service:
       address: "static://localhost:9092"
