feat: Implement user reporting functionality
- Added ReportUserController to handle user report requests.
- Created CreateReportRequest and UpdateReportStatusRequest DTOs for report creation and status updates.
- Implemented ReportUserService and ReportUserServiceImpl for business logic related to user reports.
- Introduced ReportUserModel and ReportUserId for JPA entity representation of user reports.
- Added repository methods in ReportUserRepository for querying reports.
- Integrated gRPC clients for interaction and post services to fetch user statistics.
- Updated UserEventConsumer to fix typo in UserResponseAdmin import and improve account status handling.
- Enhanced UserService interface with new methods for user statistics and unbanning users.
- Updated application configuration for gRPC service addresses.
- Added new proto definitions for interaction and post services.

--- a/services/user-service/src/main/resources/application.yml
+++ b/services/user-service/src/main/resources/application.yml
@@ -65,12 +65,12 @@ grpc:
     auth-service:
       address: "static://localhost:9099"
       negotiationType: plaintext
-
-logging:
-  level:
-    org.nexo.userservice: DEBUG
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    interaction-service:
+      address: "static://localhost:9095"
+      negotiationType: plaintext
+    post-service:
+      address: "static://localhost:9094"
+      negotiationType: plaintext
 
 meilisearch:
   host: http://localhost:7700
@@ -81,3 +81,8 @@ meilisearch:
 kafka:
   topics:
     user-events: user-events
+
+logging:
+  level:
+    "org.apache.kafka": OFF
+    "org.springframework.kafka": OFF
