--- a/services/user-service/pom.xml
+++ b/services/user-service/pom.xml
@@ -204,16 +204,27 @@
 				<version>0.6.1</version>
 				<configuration>
 					<protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}</protocArtifact>
-					<pluginId>grpc-java</pluginId>
-					<pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
 					<protoSourceRoot>${project.basedir}/src/main/proto</protoSourceRoot>
 				</configuration>
 				<executions>
 					<execution>
-						<goals>							
+						<id>protobuf-java</id>
+						<goals>
 							<goal>compile</goal>
+						</goals>
+						<configuration>
+							<pluginId>java</pluginId>
+						</configuration>
+					</execution>
+					<execution>
+						<id>grpc-java</id>
+						<goals>							
 							<goal>compile-custom</goal>
 						</goals>
+						<configuration>
+							<pluginId>grpc-java</pluginId>
+							<pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
